[gd_scene load_steps=6 format=3 uid="uid://btpsqvie7lk3u"]

[ext_resource type="Theme" uid="uid://bvlqfwulvtuse" path="res://Scenes/brevan_button.tres" id="1_3cjc3"]
[ext_resource type="Script" uid="uid://ds0iu4rwxhban" path="res://Scripts/results.gd" id="1_3iro3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_txdwj"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.078431375, 0.10980392, 0.14509805, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r1how"]
bg_color = Color(0.25797054, 0.34418392, 0.35140115, 1)
border_width_left = 12
border_width_top = 12
border_width_right = 12
border_width_bottom = 12
border_color = Color(0.25565886, 0.2556588, 0.2556586, 1)
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_av73q"]
bg_color = Color(0.078431375, 0.10980392, 0.14509805, 1)

[node name="Results" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3iro3")
session_score_path = NodePath("Panel/UserInfo/StatsRow2/score_label")
solve_path = NodePath("Panel/UserInfo/StatsRow3/solve_label")
perfect_path = NodePath("Panel/UserInfo/StatsRow/perfect_label")
bucks_label_path = NodePath("Panel/UserInfo/StatsRow4/bucks_label")
highscore_label_path = NodePath("Panel/UserInfo/StatsRow5/high_score_label")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -13.232178
offset_bottom = -6.394409
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_txdwj")

[node name="UserInfo" type="Panel" parent="Panel"]
layout_mode = 0
offset_left = 50.0
offset_top = 216.0
offset_right = 1620.0
offset_bottom = 866.0
theme = ExtResource("1_3cjc3")

[node name="StatsRow" type="Panel" parent="Panel/UserInfo"]
layout_mode = 0
offset_left = 23.0
offset_top = 20.0
offset_right = 937.0
offset_bottom = 154.0

[node name="Label2" type="Label" parent="Panel/UserInfo/StatsRow"]
layout_mode = 0
offset_left = 40.55067
offset_top = 46.47885
offset_right = 340.55066
offset_bottom = 112.47885
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Number of Perfect Solutions:"

[node name="perfect_label" type="Label" parent="Panel/UserInfo/StatsRow"]
layout_mode = 0
offset_left = 652.0
offset_top = 48.99999
offset_right = 717.0
offset_bottom = 115.999985
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "X"

[node name="StatsRow5" type="Panel" parent="Panel/UserInfo"]
layout_mode = 0
offset_left = 962.0
offset_top = 20.0
offset_right = 1547.0
offset_bottom = 154.0
theme_override_styles/panel = SubResource("StyleBoxFlat_r1how")

[node name="Label2" type="Label" parent="Panel/UserInfo/StatsRow5"]
layout_mode = 0
offset_left = 34.550735
offset_top = 42.2535
offset_right = 334.55072
offset_bottom = 108.2535
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Your High-Score:"

[node name="high_score_label" type="Label" parent="Panel/UserInfo/StatsRow5"]
layout_mode = 0
offset_left = 485.0
offset_top = 47.0
offset_right = 550.0
offset_bottom = 114.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "X"

[node name="StatsRow4" type="Panel" parent="Panel/UserInfo"]
layout_mode = 0
offset_left = 25.0
offset_top = 171.0
offset_right = 939.0
offset_bottom = 305.0

[node name="Label2" type="Label" parent="Panel/UserInfo/StatsRow4"]
layout_mode = 0
offset_left = 34.550735
offset_top = 42.2535
offset_right = 334.55072
offset_bottom = 108.2535
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Brevan Bucks Earned:"

[node name="bucks_label" type="Label" parent="Panel/UserInfo/StatsRow4"]
layout_mode = 0
offset_left = 485.0
offset_top = 47.0
offset_right = 550.0
offset_bottom = 114.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "X"

[node name="StatsRow2" type="Panel" parent="Panel/UserInfo"]
layout_mode = 0
offset_left = 25.0
offset_top = 323.0
offset_right = 939.0
offset_bottom = 457.0

[node name="Label2" type="Label" parent="Panel/UserInfo/StatsRow2"]
layout_mode = 0
offset_left = 35.898552
offset_top = 39.4366
offset_right = 335.89856
offset_bottom = 105.4366
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Score This Round:"

[node name="score_label" type="Label" parent="Panel/UserInfo/StatsRow2"]
layout_mode = 0
offset_left = 420.0
offset_top = 44.0
offset_right = 485.0
offset_bottom = 111.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "X"

[node name="StatsRow3" type="Panel" parent="Panel/UserInfo"]
layout_mode = 0
offset_left = 22.0
offset_top = 476.0
offset_right = 936.0
offset_bottom = 610.0

[node name="Label2" type="Label" parent="Panel/UserInfo/StatsRow3"]
layout_mode = 0
offset_left = 34.449272
offset_top = 43.66195
offset_right = 334.44928
offset_bottom = 109.66195
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Solve %:"

[node name="solve_label" type="Label" parent="Panel/UserInfo/StatsRow3"]
layout_mode = 0
offset_left = 383.0
offset_top = 37.0
offset_right = 448.0
offset_bottom = 104.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "X"

[node name="main_scene" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 1033.0
offset_top = 700.0
offset_right = 1586.0001
offset_bottom = 819.0
theme = ExtResource("1_3cjc3")
text = "
Back to Menu"

[node name="top bar" type="Panel" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 9.0
offset_right = 1680.0
offset_bottom = 199.0
theme_override_styles/panel = SubResource("StyleBoxFlat_av73q")

[node name="Username" type="Label" parent="top bar"]
layout_mode = 0
offset_left = 653.0
offset_top = 38.0
offset_right = 1451.0001
offset_bottom = 131.0
theme_override_font_sizes/font_size = 70
text = "RESULTS"

[connection signal="pressed" from="Panel/main_scene" to="." method="_on_main_scene_pressed"]
